Fix alignment of sidebar TOC entries (#1775)

--- a/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-primary.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-primary.scss
@@ -174,7 +174,6 @@ $sidebar-padding-right: 1rem;
 
     position: relative;
 
-    align-items: center;
     > .reference,
     .caption {
       margin-right: calc(
